--- a/scraper/package.json
+++ b/scraper/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-redis": "^1.1.7",
+    "aws-sdk": "^2.654.0",
     "cloudscraper": "^4.6.0",
+    "dotenv": "^8.2.0",
     "puppeteer": "^2.1.1",
     "puppeteer-core": "^2.1.1",
     "request": "^2.88.2",
