--- a/scraper/package.json
+++ b/scraper/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.654.0",
     "cloudscraper": "^4.6.0",
     "dotenv": "^8.2.0",
+    "lodash": "^4.17.15",
     "puppeteer": "^2.1.1",
     "puppeteer-core": "^2.1.1",
     "request": "^2.88.2",
