--- a/new_scraper/package.json
+++ b/new_scraper/package.json
@@ -12,8 +12,10 @@
     "async-redis": "^1.1.7",
     "aws-sdk": "^2.654.0",
     "cloudscraper": "^4.6.0",
+    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
+    "node-fetch": "^2.6.0",
     "puppeteer": "^2.1.1",
     "puppeteer-core": "^2.1.1",
     "request": "^2.88.2",
